--- a/Jama/pom.xml
+++ b/Jama/pom.xml
@@ -34,6 +34,15 @@
             <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
         </license>
     </licenses>
+    
+    <repositories>
+    	<repository>  
+		    <id>prime-repo</id>  
+		    <name>PrimeFaces Maven Repository</name>  
+		    <url>http://repository.primefaces.org</url>  
+		    <layout>default</layout>  
+		</repository>  
+    </repositories>
 
     <properties>
         <!-- Explicitly declaring the source encoding eliminates the following 
@@ -214,7 +223,13 @@
 	    <dependency>  
 	        <groupId>org.richfaces.core</groupId>  
 	        <artifactId>richfaces-core-impl</artifactId>  
-    	</dependency> 
+    	</dependency>
+    	
+    	<dependency>  
+		    <groupId>org.primefaces</groupId>  
+		    <artifactId>primefaces</artifactId>  
+		    <version>3.5</version>  
+		</dependency> 
     </dependencies>
 
     <build>
