--- a/Jama/pom.xml
+++ b/Jama/pom.xml
@@ -64,9 +64,9 @@
 		<!-- maven-compiler-plugin -->
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<maven.compiler.source>1.6</maven.compiler.source>
-		
+
 		<!-- DeltaSpike -->
-			<deltaspike.version>0.5</deltaspike.version>
+		<deltaspike.version>0.5</deltaspike.version>
 	</properties>
 
 
@@ -231,8 +231,8 @@
 
 		<!-- DeltaSpike -->
 
-		
-		
+
+
 		<dependency>
 			<groupId>org.apache.deltaspike.core</groupId>
 			<artifactId>deltaspike-core-api</artifactId>
@@ -259,6 +259,19 @@
 			<artifactId>deltaspike-security-module-impl</artifactId>
 			<version>${deltaspike.version}</version>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!-- FileUpload -->
+
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 
 
