messaggi di errore fix

--- a/Jama/src/main/resources/errorMessages.properties
+++ b/Jama/src/main/resources/errorMessages.properties
@@ -1,3 +1,4 @@
 javax.faces.component.UIInput.REQUIRED={0}: campo obbligatorio
 javax.faces.converter.IntegerConverter.INTEGER={2}: {0} non è un numero valido
 javax.faces.converter.NumberConverter.NUMBER={2}: {0} non è un numero valido
+javax.faces.validator.DoubleRangeValidator.NOT_IN_RANGE={2}: non è un numero valido
