--- a/Jama/pom.xml
+++ b/Jama/pom.xml
@@ -228,6 +228,13 @@
 			<version>3.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-annotations</artifactId>
+			<version>3.5.6-Final</version>
+		</dependency>
+
+
 
 		<!-- DeltaSpike -->
 
