--- a/Jama/src/main/resources/errorMessages.properties
+++ b/Jama/src/main/resources/errorMessages.properties
@@ -2,3 +2,5 @@ javax.faces.component.UIInput.REQUIRED={0}: campo obbligatorio
 javax.faces.converter.IntegerConverter.INTEGER={2}: {0} non è un numero valido
 javax.faces.converter.NumberConverter.NUMBER={2}: {0} non è un numero valido
 javax.faces.validator.DoubleRangeValidator.NOT_IN_RANGE={2}: non è un numero valido
+javax.faces.validator.DoubleRangeValidator.MINIMUM={1}: non è un numero valido
+javax.faces.validator.DoubleRangeValidator.MAXIMUM={1}: non è un numero valido
