--- a/Jama/pom.xml
+++ b/Jama/pom.xml
@@ -275,6 +275,14 @@
 			<version>1.3.2</version>
 		</dependency>
 
+		<!-- FreeMaker -->
+
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.20</version>
+		</dependency>
+
 
 	</dependencies>
 
