--- a/Jama/pom.xml
+++ b/Jama/pom.xml
@@ -307,6 +307,15 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.deltaspike.modules</groupId>
+			<artifactId>deltaspike-jsf-module-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.deltaspike.modules</groupId>
+			<artifactId>deltaspike-jsf-module-impl</artifactId>
+		</dependency>
+
 		<!-- FileUpload -->
 
 		<dependency>
@@ -325,16 +334,17 @@
 			<artifactId>freemarker</artifactId>
 		</dependency>
 
+		<!-- Money -->
 
 		<dependency>
-			<groupId>org.apache.deltaspike.modules</groupId>
-			<artifactId>deltaspike-jsf-module-api</artifactId>
+			<groupId>org.joda</groupId>
+			<artifactId>joda-money</artifactId>
+			<version>0.9</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.deltaspike.modules</groupId>
-			<artifactId>deltaspike-jsf-module-impl</artifactId>
-		</dependency>
+
 	</dependencies>
+
+
 
 
 
