--- a/Jama/src/main/webapp/WEB-INF/web.xml
+++ b/Jama/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 		<url-pattern>/faces/*</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>faces/login.xhtml</welcome-file>
+		<welcome-file>faces/home.xhtml</welcome-file>
 	</welcome-file-list>
 	<context-param>
 		<param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
