--- a/Jama/src/main/resources/config/ldap.properties
+++ b/Jama/src/main/resources/config/ldap.properties
@@ -1,5 +1,5 @@
 ldapPort =636
 ldapHost =intranet.dinfo.unifi.it
-loginDN =cn=jama,dc=dinfo,dc=unifi,dc=it
+loginDN =cn=jama,ou=applications,dc=dinfo,dc=unifi,dc=it
 password =UfoRobot-123
 searchBase =ou=people,dc=dinfo,dc=unifi,dc=it
