--- a/Jama/src/main/resources/config/ldap.properties
+++ b/Jama/src/main/resources/config/ldap.properties
@@ -3,3 +3,5 @@ ldapHost =intranet.dinfo.unifi.it
 loginDN =cn=jama,ou=applications,dc=dinfo,dc=unifi,dc=it
 password =UfoRobot-123
 searchBase =ou=people,dc=dinfo,dc=unifi,dc=it
+deptsBusinessCategory=0001
+hoursBeforeCacheUpdate=1
