--- a/Jama/src/main/webapp/WEB-INF/web.xml
+++ b/Jama/src/main/webapp/WEB-INF/web.xml
@@ -30,4 +30,8 @@
 		<filter-name>PrimeFaces FileUpload Filter</filter-name>
 		<servlet-name>Faces Servlet</servlet-name>
 	</filter-mapping>
+	
+	<session-config>
+		<session-timeout>60</session-timeout>
+	</session-config>
 </web-app>
